<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreBoard"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_board"
        android:textColor="#FFF"
        android:background="#6085cf"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_player1_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            tools:hint="@string/player_1_name"
            android:textColorHint="#FFF"
            android:gravity="center"
            android:background="#3f6dc7"
            android:textColor="#FFF"/> />

        <TextView
            android:id="@+id/tv_player2_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:hint="@string/player_2_name"
            android:textColorHint="#FFF"
            android:gravity="center"
            android:background="#3f6dc7"
            android:textColor="#FFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_player1_score"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            tools:hint="@string/player_1_score"
            android:textColorHint="#FFF"
            android:gravity="center"
            android:background="#2953a7"
            android:textColor="#FFF"/> />

        <TextView
            android:id="@+id/tv_player2_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:hint="@string/player_2_score"
            android:textColorHint="#FFF"
            android:gravity="center"
            android:background="#2953a7"
            android:textColor="#FFF"/>

    </LinearLayout>





</LinearLayout>
