<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project01.wengame.TicTacToe"
    android:orientation="vertical"

    >

    <fragment
        android:id="@+id/frag_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="project01.wengame.ScoreBoard"
        tools:layout="@layout/fragment_score_board"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tic_tac_toe"
        android:textColor="#5171d7"
        android:textSize="30sp"
        android:paddingTop="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_ttt_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/player_1"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" goes first, and uses "
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_ttt_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/player_2"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" goes next, and uses "
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_y"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="285sp"
        android:orientation="vertical"
        android:paddingLeft="28sp"
        android:paddingRight="28sp"
        android:paddingTop="13sp"
        android:paddingBottom="13sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/ttt_11"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"
                />

            <ImageButton
                android:id="@+id/ttt_12"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>

            <ImageButton
                android:id="@+id/ttt_13"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/ttt_21"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>
            <ImageButton
                android:id="@+id/ttt_22"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>
            <ImageButton
                android:id="@+id/ttt_23"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageButton
                android:id="@+id/ttt_31"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>
            <ImageButton
                android:id="@+id/ttt_32"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>
            <ImageButton
                android:id="@+id/ttt_33"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:paddingTop="10sp"
        android:id="@+id/ttt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_result_will_be_shown_here"
        android:textSize="22sp"
        android:textColor="#1894e1"/>

    <LinearLayout
        android:paddingTop="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/ttt_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replay"/>

        <Button
            android:id="@+id/ttt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_game_home"
            android:onClick="backToHome"
            />

    </LinearLayout>




</LinearLayout>
